--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     margin: 0;
     background-color: black; /* Fondo negro */
-    color: white; /* Texto blanco */
+    color: #32CD32; /* Texto verde amigable a la vista */
     overflow: hidden;
 }
 
@@ -15,8 +15,13 @@ body {
     text-align: center;
 }
 
+.day-of-week {
+    font-size: 1em; /* Tamaño de fuente para mostrar el día de la semana */
+    margin-bottom: 10px;
+}
+
 h1 {
-    font-size: 6em;
+    font-size: 4em; /* Tamaño de fuente para el verbo del día */
     margin: 20px 0;
 }
 
@@ -25,11 +30,11 @@ h1 {
 }
 
 h2 {
-    font-size: 4em;
+    font-size: 3em; /* Tamaño de fuente para el título del tiempo verbal */
     margin: 10px 0;
 }
 
 div[id="conjugations"] {
-    font-size: 3em;
+    font-size: 2em; /* Tamaño de fuente para las conjugaciones verbales */
     line-height: 1.5em;
 }
