--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,12 @@ body {
 }
 
 .day-of-week {
-    font-size: 0.5em; /* Tamaño de fuente reducido */
+    font-size: 0.25em; /* Tamaño de fuente aún más reducido */
     margin-bottom: 10px;
 }
 
 h1 {
-    font-size: 2em; /* Tamaño de fuente reducido */
+    font-size: 1em; /* Tamaño de fuente aún más reducido */
     margin: 10px 0;
 }
 
@@ -30,11 +30,11 @@ h1 {
 }
 
 h2 {
-    font-size: 2em; /* Tamaño de fuente reducido */
+    font-size: 1em; /* Tamaño de fuente aún más reducido */
     margin: 10px 0;
 }
 
 div[id="conjugations"] {
-    font-size: 1.5em; /* Tamaño de fuente reducido */
+    font-size: 0.75em; /* Tamaño de fuente aún más reducido */
     line-height: 1.5em;
 }
