--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,12 @@ body {
 }
 
 .day-of-week {
-    font-size: 0.25em; /* Tamaño de fuente reducido */
+    font-size: 0.375em; /* Tamaño de fuente aumentado en un 50% */
     margin-bottom: 10px;
 }
 
 h1 {
-    font-size: 1em; /* Tamaño de fuente reducido */
+    font-size: 1.5em; /* Tamaño de fuente aumentado en un 50% */
     margin: 10px 0;
 }
 
@@ -35,11 +35,11 @@ h1 {
 }
 
 h2 {
-    font-size: 1em; /* Tamaño de fuente reducido */
+    font-size: 1.5em; /* Tamaño de fuente aumentado en un 50% */
     margin: 10px 0;
 }
 
 div[id="conjugations"] {
-    font-size: 0.75em; /* Tamaño de fuente reducido */
+    font-size: 1.125em; /* Tamaño de fuente aumentado en un 50% */
     line-height: 1.5em;
 }
